# rufi

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
src/: commands.rs  config.rs  error.rs  fuzzy.rs  main.rs  theme.rs  ui.rs
