[package]
name = "rufi"
version = "0.1.0"
edition = "2024"
authors = ["David Muriithi <muriithid05@gmail.com>"]
description = "A fast, customizable launcher for x11"
license = "MIT"
repository = "https://github.com/BarriosXJavier/rufi"
keywords = ["launcher", "x11", "rufi", "desktop", "linux"]
categories = ["command-line-utilities", "gui"]

[dependencies]
cairo-rs = { version = "0.21.1", features = ["xcb"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
pango = "0.21.1"
pangocairo = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"
x11rb = "0.13.1"
